# loom

./: .gitignore  README.md  pyproject.toml  telegram_bot.py
.github/workflows/: telegram_bot.yml
src/loom/: __init__.py  cli.py  compaction.py  loop.py  state.py  test_tools.py  tools.py
tests/: test_compaction.py
