[project]
name = "loom"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "vtmhieu", email = "vtmhieu111@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.3",
    "google-genai>=2.2.0",
    "rich>=15.0.0",
]

[project.scripts]
loom = "loom.cli:main"

[build-system]
requires = ["uv_build>=0.11.10,<0.12.0"]
build-backend = "uv_build"
